# global_i18n

./: OAT.xml  bundle.json  i18n.gni
frameworks/intl/: BUILD.gn
frameworks/intl/entity_recognition/include/: entity_recognizer.h
frameworks/intl/entity_recognition/src/: entity_recognizer.cpp
frameworks/intl/etc/: i18n.para  i18n.para.dac  i18n_param_config.xml  supported_locales.xml  supported_locales_old.xml  supported_regions.xml
frameworks/intl/etc/lang/: bo.xml  en-Latn.xml  supported_locales.xml  ug.xml  zh-Hans.xml  zh-Hant.xml
frameworks/intl/etc/location/: num_timezone.cfg
frameworks/intl/etc/region/: supported_regions.xml
frameworks/intl/include/: advanced_measure_format.h  character.h  chinese_calendar.h  collator.h  date_time_format.h  date_time_format_part.h  date_time_rule.h  displaynames.h  entity_recognizer.h  format_utils.h  holiday_manager.h  i18n_break_iterator.h  i18n_calendar.h  i18n_hilog.h  i18n_normalizer.h  i18n_timezone.h  i18n_types.h  index_util.h  intl_date_time_format.h  intl_locale.h  intl_plural_rules.h  iso8601_date_time_format.h  locale_compare.h  locale_config.h  locale_config_ext.h  locale_data.h  locale_helper.h  locale_info.h  lunar_calendar.h  matched_date_time_info.h  measure_data.h  multi_users.h  number_format.h  phone_number_format.h  phone_number_matched.h  phone_number_rule.h  regex_rule.h  relative_time_format.h  rules_engine.h  signature_verifier.h  (+10 more)
frameworks/intl/parameter_upgrade/: BUILD.gn
frameworks/intl/parameter_upgrade/include/: signature_verifier.h  upgrade_utils.h
frameworks/intl/parameter_upgrade/mount/: hmos_libphonenumber_mount.cpp  hmos_taboo_mount.cpp  hmos_timezone_mount.cpp
frameworks/intl/parameter_upgrade/src/: signature_verifier.cpp  upgrade_utils.cpp
frameworks/intl/src/: advanced_measure_format.cpp  character.cpp  chinese_calendar.cpp  collator.cpp  date_rule_init.cpp  date_time_filter.cpp  date_time_format.cpp  date_time_format_part.cpp  date_time_matched.cpp  date_time_rule.cpp  displaynames.cpp  entity_recognizer.cpp  format_utils.cpp  holiday_manager.cpp  i18n_break_iterator.cpp  i18n_calendar.cpp  i18n_normalizer.cpp  i18n_timezone.cpp  index_util.cpp  intl_date_time_format.cpp  intl_locale.cpp  intl_plural_rules.cpp  iso8601_date_time_format.cpp  locale_compare.cpp  locale_config.cpp  locale_helper.cpp  locale_info.cpp  locale_matcher.cpp  locale_util.cpp  lunar_calendar.cpp  measure_data.cpp  multi_users.cpp  number_format.cpp  phone_number_format.cpp  phone_number_matched.cpp  phone_number_rule.cpp  plural_rules.cpp  preferred_language.cpp  regex_rule.cpp  relative_time_format.cpp  (+12 more)
frameworks/intl/test/: BUILD.gn
frameworks/intl/test/fuzztest/: BUILD.gn
frameworks/intl/test/unittest/: collator_test.cpp  collator_test.h  convert_test.cpp  convert_test.h  customized_data_test.cpp  customized_data_test.h  customized_date_time_format_test.cpp  customized_date_time_format_test.h  date_time_format_test.cpp  date_time_format_test.h  displaynames_test.cpp  displaynames_test.h  i18n_test.cpp  i18n_test.h  intl_date_time_format_test.cpp  intl_date_time_format_test.h  intl_locale_test.cpp  intl_locale_test.h  intl_number_format_test.cpp  intl_plural_rules_test.cpp  intl_plural_rules_test.h  intl_test.cpp  intl_test.h  intl_test_extent.cpp  iso8601_date_time_format_test.cpp  iso8601_date_time_format_test.h  locale_config_test.cpp  locale_config_test.h  lunar_calendar_test.cpp  lunar_calendar_test.h  number_format_test.cpp  number_format_test.h  number_format_test_extend.cpp  number_format_test_extend.h  phone_number_format_test.cpp  phone_number_format_test.h  relative_time_format_test.cpp  relative_time_format_test.h  styled_format_test.cpp  (+5 more)
frameworks/zone/: BUILD.gn
frameworks/zone/etc/: country_default_zone.cfg
frameworks/zone/src/: zone_util.cpp
frameworks/zone/test/: BUILD.gn
interfaces/cj/: BUILD.gn  cj_i18n_mock.cpp  i18n_ffi.cpp  i18n_ffi.h
interfaces/cj/include/: i18n_breakIterator_ffi.h  i18n_breakIterator_impl.h  i18n_calendar_ffi.h  i18n_calendar_impl.h  i18n_entity_ffi.h  i18n_entity_impl.h  i18n_ffi.h  i18n_holiday_ffi.h  i18n_holiday_impl.h  i18n_index_util_ffi.h  i18n_index_util_impl.h  i18n_normalizer_ffi.h  i18n_normalizer_impl.h  i18n_phone_number_format_ffi.h  i18n_phone_number_format_impl.h  i18n_struct.h  i18n_system_ffi.h  i18n_timezone_ffi.h  i18n_timezone_impl.h  i18n_transliterator_ffi.h  i18n_transliterator_impl.h  i18n_unicode_ffi.h  i18n_util_ffi.h
interfaces/cj/intl/: BUILD.gn
interfaces/cj/src/: i18n_breakIterator_ffi.cpp  i18n_breakIterator_impl.cpp  i18n_calendar_ffi.cpp  i18n_calendar_impl.cpp  i18n_entity_ffi.cpp  i18n_entity_impl.cpp  i18n_ffi.cpp  i18n_holiday_ffi.cpp  i18n_holiday_impl.cpp  i18n_index_util_ffi.cpp  i18n_index_util_impl.cpp  i18n_normalizer_ffi.cpp  i18n_normalizer_impl.cpp  i18n_phone_number_format_ffi.cpp  i18n_phone_number_format_impl.cpp  i18n_system_ffi.cpp  i18n_timezone_ffi.cpp  i18n_timezone_impl.cpp  i18n_transliterator_ffi.cpp  i18n_transliterator_impl.cpp  i18n_unicode_ffi.cpp  i18n_util_ffi.cpp
interfaces/js/kits/: BUILD.gn
ndk/: BUILD.gn
ndk/include/: oh_errorcode.h  oh_timezone.h
ndk/src/: oh_timezone.cpp  timezone.cpp
ndk/test/: BUILD.gn
ndk/test/unittest/: oh_timezone_test.cpp  oh_timezone_test.h  timezone_test.cpp  timezone_test.h
services/: BUILD.gn  II18nServiceAbility.idl
services/etc/: BUILD.gn
services/etc/init/: i18n_service.cfg
services/etc/timezone/: prefabrication  version.txt
services/include/: i18n_service_ability.h  i18n_service_ability_client.h  i18n_service_ability_load_callback.h  i18n_service_ability_load_manager.h  i18n_service_ability_proxy.h  i18n_service_ability_stub.h  i18n_service_event.h  ii18n_service_ability.h
services/src/: hmos_libphonenumber_mount.cpp  hmos_timezone_mount.cpp  i18n_service_ability.cpp  i18n_service_ability_client.cpp  i18n_service_ability_load_callback.cpp  i18n_service_ability_load_manager.cpp  i18n_service_ability_proxy.cpp  i18n_service_ability_stub.cpp  i18n_service_event.cpp
services/test/: BUILD.gn
ta/: BUILD.gn
(+285 files in other folders)
