# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("i18n_service_ability") {
  deps = [
    ":i18n_sa",
    ":i18n_sa_client",
    "./etc:i18n_sa_etc",
  ]
}

ohos_shared_library("i18n_sa_client") {
  sources = [
    "./src/i18n_service_ability_client.cpp",
    "./src/i18n_service_ability_load_callback.cpp",
    "./src/i18n_service_ability_load_manager.cpp",
    "./src/i18n_service_ability_proxy.cpp",
  ]
  include_dirs = [
    "./include",
    "../frameworks/intl/include",
  ]
  deps = []
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  part_name = "i18n"
  subsystem_name = "global"
}

ohos_shared_library("i18n_sa") {
  sources = [
    "./src/i18n_service_ability.cpp",
    "./src/i18n_service_ability_stub.cpp",
  ]
  include_dirs = [
    "./include",
    "../frameworks/intl/include",
    "../interfaces/native/inner_api/preferred_language/include",
  ]
  deps = [
    ":i18n_sa_client",
    "../frameworks/intl:intl_util",
    "../frameworks/intl:preferred_language",
  ]
  external_deps = [
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  part_name = "i18n"
  subsystem_name = "global"
}
