# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("binary_files") {
  deps = [ ":tz_pixel_dat" ]
}

ohos_prebuilt_etc("tz_pixel_dat") {
  source = "./timezone/tz_2023001-000360.dat"
  module_install_dir = "usr/ohos_timezone/"
  part_name = "i18n"
  subsystem_name = "global"
}
