# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("zone_util_public_configs") {
  include_dirs = [
    "//base/global/i18n/frameworks/intl/include",
    "//base/global/i18n/interfaces/native/inner_api/zone/include",
  ]
}

ohos_shared_library("zone_util") {
  branch_protector_ret = "pac_ret"
  public_configs = [ ":zone_util_public_configs" ]
  sources = [ "src/zone_util.cpp" ]
  cflags_cc = [
    "-Wall",
    "-fPIC",
  ]
  deps = [ "//base/global/i18n/frameworks/intl:intl_util" ]
  external_deps = [
    "hilog:libhilog",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "libphonenumber:phonenumber_standard",
    "libpng:libpng",
    "libxml2:libxml2",
  ]
  subsystem_name = "global"
  part_name = "i18n"
}
