# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/i18n/i18n.gni")
import("//build/test.gni")

module_output_path = "i18n/i18n"

ohos_unittest("ndk_test") {
  module_out_path = module_output_path

  cflags_cc = [ "-Wno-inconsistent-missing-override" ]

  sources = [ "unittest/oh_timezone_test.cpp" ]
  include_dirs = [ "//base/global/i18n/ndk/include" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest",
    "hilog:libhilog",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
  ]

  deps = [ "//base/global/i18n/ndk:native_i18n" ]
}
